--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <title>Home</title>
 </head>
 <body>
+  <!-- header -->
+    <header>
+       <a href="index.html"> <img class="header_icon" src="images/icon1.svg" alt="icon">
+       </a>
+    <nav class="header_navigation">
+        <ul>
+            <li class="header_navli">
+               <a class="header_nav" href="index.html">Home</a> 
+            </li>
+            <li class="header_navli header_navmiddleli">
+                <a class="header_nav" href="">Post</a>
+            </li>
+            <li class="header_navli">
+                <a class="header_nav" href="">Newsletter</a>
+            </li>
+        </ul>
+    </nav>
+    <a class="header_button" href="">Bergabung</a>
+    </header>
+
+    
     
 </body>
 </html>
