--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,38 +9,68 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
+
 <body>
-  <!-- header -->
+    <!-- header -->
     <header>
-       <a href="index.html"> <img class="header_icon" src="images/icon1.svg" alt="icon">
-       </a>
-    <nav class="header_navigation">
-        <ul>
-            <li class="header_navli">
-               <a class="header_nav" href="index.html">Home</a> 
-            </li>
-            <li class="header_navli header_navmiddleli">
-                <a class="header_nav" href="">Post</a>
-            </li>
-            <li class="header_navli">
-                <a class="header_nav" href="">Newsletter</a>
-            </li>
-        </ul>
-    </nav>
-    <a class="header_button" href="">Bergabung</a>
+        <a href="index.html"> <img class="header_icon" src="images/icon1.svg" alt="icon">
+        </a>
+        <nav class="header_navigation">
+            <ul>
+                <li class="header_navli">
+                    <a class="header_nav" href="index.html">Home</a>
+                </li>
+                <li class="header_navli header_navmiddleli">
+                    <a class="header_nav" href="">Post</a>
+                </li>
+                <li class="header_navli">
+                    <a class="header_nav" href="">Newsletter</a>
+                </li>
+            </ul>
+        </nav>
+        <a class="header_button" href="">Bergabung</a>
     </header>
 
-<!-- article -->
+    <!-- article -->
 
-<article>
-    <h1 class="article_title">Tentang Kami</h1>
-    <p class="article_txt article_txt1">BERTUMBUH adalah organisasi non-profit yang mempunyai tujuan untuk Melindungi, menjaga, merawat, dan melestarikan pohon-pohon yang ada di dunia serta kami akan  terus menjaga kestabilan bumi lewat penanaman dan penghijauan.</p>
-    <p class="article_txt">Lewat penanaman dan penghijauan ini juga  kita dapat mencegah berbagai masalah seperti pemanasan global, polusi, banjir, tanah longsor serta terjaganya flora dan dan fauna yang ada di dunia dan oleh dasar ini pula organisasi Bertumbuh dibuat. Kamu juga bisa membantu Bertumbuh dengan cara menjadi relawan, petani serta kamu juga bisa berdonasi untuk mendukung kegiatan oprasional kami.</p>
+    <article>
+        <h1 class="article_title">Tentang Kami</h1>
+        <p class="article_txt article_txt1">BERTUMBUH adalah organisasi non-profit yang mempunyai tujuan untuk
+            Melindungi, menjaga, merawat, dan melestarikan pohon-pohon yang ada di dunia serta kami akan terus menjaga
+            kestabilan bumi lewat penanaman dan penghijauan.</p>
+        <p class="article_txt">Lewat penanaman dan penghijauan ini juga kita dapat mencegah berbagai masalah seperti
+            pemanasan global, polusi, banjir, tanah longsor serta terjaganya flora dan dan fauna yang ada di dunia dan
+            oleh dasar ini pula organisasi Bertumbuh dibuat. Kamu juga bisa membantu Bertumbuh dengan cara menjadi
+            relawan, petani serta kamu juga bisa berdonasi untuk mendukung kegiatan oprasional kami.</p>
+    </article>
+
+    <!-- section1 -->
+    <section class="section1">
+        <img class="section1_image" src="images/section1image.png" alt="tree">
+        <div class="section1_div">
+            <h2 class="section1_title">Bersama Lindungi Bumi Kita
+                Untuk Masa Depan</h2>
+            <p class="section1_txt">Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang
+                lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam lebih dari 10 juta pohon
+                dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua. Kami bermimpi untuk menanam
+                lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri untuk kita, dia, dan semua.
+                Kami bermimpi untuk menanam lebih dari 10 juta pohon dan menciptakan dunia yang lebih indah dan asri
+                untuk kita, dia, dan semua.</p>
+
+            <button>Read more</button>
+        </div>
+    </section>
+
+    <!-- section2 -->
+    <section class="section2">
+
+    </section>
 
 
-</article>
 
 
-    
+
+
 </body>
+
 </html>
